fixing right position of lat dropdown to prevent x overflow

--- a/style.css
+++ b/style.css
@@ -344,7 +344,7 @@ img {
 }
 
 #goods-dropdown {
-    right: -.1rem;
+    right: -.5rem;
 }
 
 @media (max-width: 48rem) {
